metadata/objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>Address_Geo__c</fullName>
        <label>Address Geo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Alcohol__c</fullName>
        <label>Alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Full Bar</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Beer and Wine Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Address__c</fullName>
        <label>City Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coat_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coat Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Good_For_Dancing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good For Dancing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Happy_Hour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Happy Hour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Noise_Level__c</fullName>
        <label>Noise Level</label>
        <picklist>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Loud</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <picklist>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Lot</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Address__c</fullName>
        <label>State Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Wheelchair_Accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheelchair Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Address__c</fullName>
        <label>Zip Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>City_Address__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>